<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">

    <TextView
        android:id="@+id/product_name"
        style="@style/BoldTextLabel"
        android:layout_width="match_parent"
        android:textSize="@dimen/_14sdp" />

    <LinearLayout style="@style/ReceiveStockLayout">

        <TextView
            style="@style/ReceiveStock.Text"
            android:text="@string/qty_ordered" />

        <TextView
            android:id="@+id/qty_incoming"
            style="@style/ReceiveStock.Text.Value"
            android:hint="729 Packets" />
    </LinearLayout>

    <LinearLayout style="@style/ReceiveStockLayout">

        <TextView
            style="@style/ReceiveStock.Text"
            android:text="@string/percent_delivered" />

        <TextView
            android:id="@+id/percent_delivered"
            style="@style/ReceiveStock.Text.Value"
            android:hint="0%" />
    </LinearLayout>

    <LinearLayout style="@style/ReceiveStockLayout">

        <TextView
            style="@style/ReceiveStock.Text"
            android:text="@string/qty_delivered" />

        <TextView
            android:id="@+id/qty_delivered"
            style="@style/ReceiveStock.Text.Value"
            android:hint="0 PC" />
    </LinearLayout>

    <LinearLayout style="@style/ReceiveStockLayout">

        <TextView
            style="@style/ReceiveStock.Text"
            android:text="@string/qty_returned" />

        <TextView
            android:id="@+id/qty_returned"
            style="@style/ReceiveStock.Text.Value"
            android:hint="0 PC" />
    </LinearLayout>

    <LinearLayout style="@style/ReceiveStockLayout">

        <TextView
            style="@style/ReceiveStock.Text"
            android:text="@string/qty_pending" />

        <TextView
            android:id="@+id/qty_pending"
            style="@style/ReceiveStock.Text.Value"
            android:hint="0 PC"
            android:textColor="@color/pending" />
    </LinearLayout>

    <TextView
        android:id="@+id/qty_pending_warning"
        style="@style/SmallTextLabel"
        android:layout_width="match_parent"
        android:textColor="@color/gloss_red"
        android:layout_marginTop="@dimen/_3sdp"
        android:visibility="gone"
        android:textSize="@dimen/_8sdp"
        android:gravity="end"
        android:alpha="0.8"
        android:text="@string/warning_invalid_delivery" />

    <LinearLayout
        style="@style/ReceiveStockLayout"
        android:visibility="gone">

        <TextView
            style="@style/ReceiveStock.Text"
            android:text="@string/batch_no" />

        <TextView
            android:id="@+id/batch_number"
            style="@style/ReceiveStock.Text.Value"
            android:hint="512-647" />

    </LinearLayout>

    <LinearLayout
        style="@style/ReceiveStockLayout"
        android:visibility="gone">

        <TextView
            style="@style/ReceiveStock.Text"
            android:text="@string/expire_date" />

        <TextView
            android:id="@+id/expire_date"
            style="@style/ReceiveStock.Text.Value"
            android:hint="24-08-2021" />

    </LinearLayout>

    <LinearLayout
        style="@style/ReceiveStockLayout"
        android:visibility="gone">

        <TextView
            style="@style/ReceiveStock.Text"
            android:layout_weight="2"
            android:text="@string/temp" />

        <EditText
            android:id="@+id/temp_et"
            style="@style/CustomSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:minEms="10"
            android:textColor="@color/grey_separator"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout style="@style/ReceiveStockLayout">

        <TextView
            style="@style/ReceiveStock.Text"
            android:layout_weight="2"
            android:text="@string/qty_accepted" />

        <EditText
            android:id="@+id/et_accepted"
            style="@style/CustomSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:minEms="10"
            android:textColor="@color/grey_separator"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout style="@style/ReceiveStockLayout">

        <TextView
            style="@style/ReceiveStock.Text"
            android:layout_weight="2"
            android:text="@string/qty_returned" />

        <EditText
            android:id="@+id/et_returned"
            style="@style/CustomSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:minEms="10"
            android:textColor="@color/grey_separator"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/decline_reason_layout"
        style="@style/ReceiveStockLayout"
        android:visibility="gone">

        <TextView
            style="@style/ReceiveStock.Text"
            android:layout_weight="2"
            android:text="@string/decline_reason" />

        <TextView
            android:id="@+id/decline_reason"
            style="@style/CustomSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="9dp"
            android:minEms="10"
            android:textColor="@color/grey_separator"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout style="@style/ReceiveStockLayout">

        <TextView
            style="@style/ReceiveStock.Text"
            android:layout_weight="2"
            android:text="@string/qty_pending"
            android:textColor="@color/pending" />

        <TextView
            android:id="@+id/et_pending"
            style="@style/CustomSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/pending"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/receive_btn"
        style="@style/BoldTextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:background="@drawable/rounded_green_button_status"
        android:enabled="false"
        android:gravity="center"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/receive"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />
</LinearLayout>