<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/return_receipt_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".app.returnstock.presentation.returnreceipt.ReturnReceiptFragment">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <TextView
        android:id="@+id/topText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start_of_goods_returned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/company_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topText" />

    <TextView
        android:id="@+id/company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masyl_general_enteprices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_logo" />

    <TextView
        android:id="@+id/issued_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goods_issued_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_name" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_24_july_2021"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issued_note" />

    <View
        android:id="@+id/horizontal_rule"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:background="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal"
        android:id="@+id/signature_section"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_rule"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/storekeeper_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/vertical_split"
            android:orientation="vertical">

            <TextView
                android:id="@+id/storekeeper_label"
                android:text="@string/store_keeper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/storekeeper_text"
                android:text="@string/christian_michael"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/storekeeper_image"
                android:contentDescription="@string/store_keeper_signature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <View
            android:id="@+id/vertical_split"
            android:layout_width="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@color/light_grey" />

        <LinearLayout
            android:id="@+id/assignee_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/vertical_split"
            android:orientation="vertical">

            <TextView
                android:id="@+id/assignee_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assigned_to" />

            <TextView
                android:id="@+id/assignee_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/christian_michael" />

            <ImageView
                android:id="@+id/assignee_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/assigned_to_signature" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:background="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@+id/signature_section"
        tools:layout_editor_absoluteX="0dp" />

    <RelativeLayout
        android:id="@+id/list_title"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/light_grey"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/goods" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/returned" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/returned_items_RV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/list_title"/>

    <TextView
        android:id="@+id/bottomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/end_of_goods_returned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf = "@+id/returned_items_RV" />

    <ImageView
        android:id="@+id/screenshot"
        app:layout_constraintTop_toBottomOf="@+id/bottomText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/buttons_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/scrollview"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/return_stock_print_receipt"
            style="@style/GreenFillActionButton"
            android:layout_width="129dp"
            android:layout_height="43dp"
            android:layout_alignParentStart="true"
            android:text="@string/print" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/return_stock_done"
            style="@style/GreenFillActionButton"
            android:layout_alignParentEnd="true"
            android:layout_width="129dp"
            android:layout_height="43dp"
            android:text="@string/done" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>