<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.skydoves.powerspinner.PowerSpinnerView
        android:id="@+id/products_parameter_spinner"
        style="@style/StockReceiveSpinner"
        android:layout_width="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="2"
        android:hint="@string/parameter"
        app:spinner_arrow_tint="@color/light_grey" />

    <EditText
        style="@style/NormalEditText"
        android:layout_width="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:hint="@string/size" />

    <TextView
        style="@style/BoldTextLabel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_weight="0.5"
        android:gravity="center_vertical"
        android:text="@string/add_with_plus"
        android:textColor="@color/secondary_blue" />

</LinearLayout>